--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -13,34 +13,53 @@
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:keepScreenOn="true"
-        android:padding="24dp">
+        android:padding="12dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="12dp">
             <Button
                 android:id="@+id/btn_start"
-                android:layout_width="150dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:enabled="@{!vm.playing}"
                 android:text="启动"/>
             <Button
                 android:id="@+id/btn_stop"
-                android:layout_width="150dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:enabled="@{vm.playing}"
                 android:text="停止"/>
         </RelativeLayout>
-        <Button
-            android:id="@+id/btn_pause"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:enabled="@{vm.playing}"
-            tools:text="暂停"
-            android:text="@{vm.pauseBtnText}"/>
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/btn_pause"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:enabled="@{vm.playing}"
+                tools:text="暂停"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="@{vm.pauseBtnText}"/>
+
+            <TextView
+                android:id="@+id/tv_currentBgMusic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{`当前背景音乐:`+vm.curMusicName}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.908"
+                app:layout_constraintStart_toEndOf="@+id/btn_pause"
+                app:layout_constraintTop_toTopOf="@+id/btn_pause"
+                tools:text="暂未设置背景音乐" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
@@ -56,14 +75,28 @@
             android:textSize="32sp"
             tools:text="12"
             android:text="@{String.valueOf(vm.curPlayingIndex)}"/>
-        <Button
-            android:id="@+id/btn_go_setting"
-            android:layout_marginTop="16dp"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.Button.Small"
-            android:enabled="@{!vm.playing}"
-            android:text="编辑小节配置"/>
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/btn_go_setting"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.Button.Small"
+                android:enabled="@{!vm.playing}"
+                android:text="编辑小节配置"/>
+            <Button
+                android:id="@+id/btn_bg_setting"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.Button.Small"
+                android:text="设置背景音乐"/>
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_play"
             android:layout_width="match_parent"
